# Mistral-Editor

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: Colors.cmake  CopyResources.cmake  Dependencies.cmake  GeneratePackage.cmake  GenerateResourcesHeader.cmake  ScanResources.cmake  Strings.cmake
src/: CMakeLists.txt  Editor.cpp  Editor.h  VendavalRenderPipeline.cpp  VendavalRenderPipeline.h  main.cpp
src/editors/: CMakeLists.txt  Camera.cpp  Camera.h  FileExplorer.cpp  FileExplorer.h  Hierarchy.cpp  Hierarchy.h  Hyerarchy.cpp  Hyerarchy.h  Inspector.cpp  Inspector.h  Scene.cpp  Scene.h
